update github action for uv sync

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - "website/**"
       - ".github/workflows/publish.yml"
-      - "requirements.txt"
+      - "pyproject.toml"
+      - "uv.lock"
   workflow_dispatch:
 
 name: Render and Publish
@@ -36,18 +37,19 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
       - name: Cache uv packages
         uses: actions/cache@v4
         with:
           path: ~/.cache/uv
-          key: uv-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+          key: uv-${{ runner.os }}-${{ hashFiles('pyproject.toml', 'uv.lock') }}
           restore-keys: |
             uv-${{ runner.os }}-
 
-      - name: Install uv and dependencies
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv pip install --system -r requirements.txt
+      - name: Install dependencies
+        run: uv sync
 
       - name: Render and Publish to GitHub Pages
         uses: quarto-dev/quarto-actions/publish@v2
