--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,7 @@ on:
     paths:
       - "website/**"
       - ".github/workflows/publish.yml"
-      - "pyproject.toml"
-      - "uv.lock"
+      - "requirements.txt"
   workflow_dispatch:
 
 name: Render and Publish
@@ -37,19 +36,18 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
       - name: Cache uv packages
         uses: actions/cache@v4
         with:
           path: ~/.cache/uv
-          key: uv-${{ runner.os }}-${{ hashFiles('pyproject.toml', 'uv.lock') }}
+          key: uv-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
           restore-keys: |
             uv-${{ runner.os }}-
 
-      - name: Install dependencies
-        run: uv sync
+      - name: Install uv and dependencies
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv pip install --system -r requirements.txt
 
       - name: Render and Publish to GitHub Pages
         uses: quarto-dev/quarto-actions/publish@v2
